--- a/aws-ubuntu-12.04/Vagrantfile
+++ b/aws-ubuntu-12.04/Vagrantfile
@@ -1,10 +1,9 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-
 Vagrant.configure("2") do |config|
-  config.vm.provider :aws do |aws|
+  config.vm.provider :aws do |aws, override|
     aws.ami = 'ami-3d4ff254'
-    aws.ssh_username = "ubuntu"
+    override.ssh.username = "ubuntu"
   end
 end
